# llama-index-toc-parser

./: README.md  dev_requirements.txt  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: run_pytest.yml
example/: main.py  test_markdown.md  toc_extraction.py  visualize.py
example/data/: test_markdown.docx  test_markdown.html  test_markdown.rst
node_chunker/: __init__.py  chunks.py  data_model.py  document_chunking.py  docx_chunking.py  html_chunking.py  jupyter_chunking.py  markdown_chunking.py  md_chunking.py  pdf_chunking.py  rst_chunking.py  utils.py
tests/: __init__.py  test_integration.py  test_markdown_chunking.py  test_pdf_chunking.py
tests/test_files/: integration_test.md  test_markdown.md
